plugins {
    id 'java'
}

apply plugin: 'java'

group = 'io.augies'
version = '1.0-SNAPSHOT'

sourceCompatibility = '11'
targetCompatibility = '11'

repositories {
    mavenCentral()
    maven {
        name = 'spigotmc-repo'
        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
    }
    maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/groups/public/'
    }
    maven {
        name = 'vault-repo'
        url = 'http://nexus.hc.to/content/repositories/pub_releases'
    }
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
    // https://mvnrepository.com/artifact/org.json/json
    implementation 'net.milkbowl.vault:VaultAPI:1.7'
    implementation 'net.luckperms:api:5.3'
    implementation 'mysql:mysql-connector-java:8.0.24'
}